--- a/index.html
+++ b/index.html
@@ -3,136 +3,64 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Controle de Produção de OP</title>
+    <title>Sistema de Registro de Produção</title>
     <style>
         body {
             font-family: Arial, sans-serif;
-            margin: 20px;
-        }
-        h1 {
-            color: #333;
-        }
-        .input-group {
-            margin-bottom: 10px;
-        }
-        label {
-            display: block;
-            margin-bottom: 5px;
-        }
-        input[type="number"],
-        input[type="text"],
-        select {
-            width: 100%;
-            padding: 8px;
-            margin-bottom: 10px;
-            box-sizing: border-box;
-        }
-        button {
-            padding: 10px 20px;
-            color: white;
-            border: none;
-            cursor: pointer;
-            margin-right: 5px;
-            margin-top: 10px;
-        }
-        .machine-btn {
-            width: 150px;
-            height: 50px;
-            margin-bottom: 10px;
-            font-size: 16px;
-        }
-        .machine-buttons {
-            display: flex;
-            gap: 10px;
-            margin-bottom: 20px;
-        }
-        .active {
-            background-color: red;
-        }
-        .inactive {
-            background-color: green;
-        }
-        .calc-btn {
-            background-color: #4CAF50;
-        }
-        .calc-btn:hover {
-            background-color: #45a049;
-        }
-        .result {
-            margin-top: 20px;
-            font-weight: bold;
         }
         table {
-            margin-top: 20px;
             width: 100%;
             border-collapse: collapse;
+            margin-top: 20px;
         }
         table, th, td {
-            border: 1px solid #ddd;
+            border: 1px solid black;
+        }
+        th, td {
             padding: 8px;
             text-align: left;
         }
         th {
             background-color: #f2f2f2;
         }
-        h2 {
-            margin-top: 30px;
+        .error {
+            color: red;
         }
     </style>
 </head>
 <body>
-    <h1>Controle de Produção</h1>
-
-    <div class="machine-buttons">
-        <button id="machine1" class="machine-btn inactive" onclick="toggleMachine(1)">CL-01</button>
-        <button id="machine2" class="machine-btn inactive" onclick="toggleMachine(2)">CL-02</button>
-        <button id="machine3" class="machine-btn inactive" onclick="toggleMachine(3)">CL-03</button>
-    </div>
-
+    <h1>Sistema de Registro de Produção</h1>
     <form id="productionForm">
-        <div class="input-group">
-            <label for="opNumber">Número da OP:</label>
-            <input type="text" id="opNumber" maxlength="13" oninput="formatOPNumber(this)" required>
-        </div>
-        <div class="input-group">
-            <label for="componentCode">Código do Componente:</label>
-            <input type="text" id="componentCode" required>
-        </div>
-        <div class="input-group">
-            <label for="opQuantity">Quantidade da OP:</label>
-            <input type="number" id="opQuantity" min="0" required>
-        </div>
-        <div class="input-group">
-            <label for="opLength">Comprimento da OP (cm):</label>
-            <input type="number" id="opLength" min="0" required>
-        </div>
-        <div class="input-group">
-            <label for="fabricType">Tipo de Tecido:</label>
-            <select id="fabricType" required>
-                <option value="">Selecione</option>
-                <option value="Plano">Plano</option>
-                <option value="Tubular">Tubular</option>
-                <option value="PET">PET</option>
-            </select>
-        </div>
-        <div class="input-group">
-            <label for="opWeight">Gramatura da OP:</label>
-            <input type="number" id="opWeight" min="0" required>
-        </div>
-        <div class="input-group">
-            <label for="piecesRemoved">Quantidade de Peças Retiradas:</label>
-            <input type="number" id="piecesRemoved" min="0" required>
-        </div>
-        <button type="button" class="calc-btn" onclick="calculateAndSave()">Calcular e Salvar</button>
+        <label for="opNumber">Número da OP:</label>
+        <input type="text" id="opNumber" required><br><br>
+
+        <label for="componentCode">Código do Componente:</label>
+        <input type="text" id="componentCode" required><br><br>
+
+        <label for="opQuantity">Quantidade da OP:</label>
+        <input type="number" id="opQuantity" required><br><br>
+
+        <label for="opLength">Comprimento da OP (em metros):</label>
+        <input type="number" id="opLength" required><br><br>
+
+        <label for="fabricType">Tipo de Tecido:</label>
+        <select id="fabricType" required>
+            <option value="Plano">Plano</option>
+            <option value="Tubular">Tubular</option>
+            <option value="PET">PET</option>
+        </select><br><br>
+
+        <label for="opWeight">Gramatura da OP (em g/m²):</label>
+        <input type="number" id="opWeight" required><br><br>
+
+        <label for="piecesRemoved">Quantidade de Peças Retiradas:</label>
+        <input type="number" id="piecesRemoved" required><br><br>
+
+        <button type="submit">Registrar Produção</button>
     </form>
 
-    <h2>Resultados:</h2>
-    <p id="cutsResult">Número de Cortes: </p>
-    <p id="turnsResult">Número de Voltas: </p>
-    <p id="cutAmountResult">Quantidade Cortada: </p>
-    <p id="totalCutAmountResult">Quantidade Total Cortada: </p>
-    <p id="cyclesResult">Número de Ciclos: </p>
-    <p id="remainingTurnsResult">Restante de Voltas para Fechar a OP: </p>
+    <h2 id="totalCutAmount">Quantidade Total Cortada: 0</h2>
+    <button onclick="downloadCSV()">Baixar Registros</button>
 
     <table id="recordsTable">
         <thead>
@@ -146,142 +74,47 @@
                 <th>Tipo de Tecido</th>
                 <th>Gramatura da OP</th>
                 <th>Quantidade de Peças Retiradas</th>
+                <th>Número de Cortes</th>
             </tr>
         </thead>
-        <tbody></tbody>
+        <tbody>
+            <!-- Registros serão adicionados aqui -->
+        </tbody>
     </table>
-
-    <button onclick="downloadCSV()">Download CSV</button>
 
     <script>
         let records = [];
+        let totalCutAmount = 0;
 
-        function toggleMachine(machineNumber) {
-            const button = document.getElementById(`machine${machineNumber}`);
-            if (button.classList.contains('inactive')) {
-                button.classList.remove('inactive');
-                button.classList.add('active');
-            } else {
-                button.classList.remove('active');
-                button.classList.add('inactive');
-            }
-        }
+        document.getElementById('productionForm').addEventListener('submit', function(event) {
+            event.preventDefault();
+            registerProduction();
+        });
 
-        function getActiveMachinesCount() {
-            let count = 0;
-            const machineButtons = document.getElementsByClassName('machine-btn');
-            for (let button of machineButtons) {
-                if (button.classList.contains('active')) {
-                    count++;
-                }
-            }
-            return count;
-        }
-
-        function formatOPNumber(input) {
-            let value = input.value.replace(/\D/g, '');
-            if (value.length > 3) value = value.substring(0, 3) + '.' + value.substring(3);
-            if (value.length > 7) value = value.substring(0, 7) + '/' + value.substring(7);
-            if (value.length > 10) value = value.substring(0, 10) + '.' + value.substring(10);
-            input.value = value;
-        }
-
-        function calculateAndSave() {
+        function registerProduction() {
             const opNumber = document.getElementById('opNumber').value;
             const componentCode = document.getElementById('componentCode').value;
-            const opQuantity = parseFloat(document.getElementById('opQuantity').value);
+            const opQuantity = parseInt(document.getElementById('opQuantity').value);
             const opLength = parseFloat(document.getElementById('opLength').value);
             const fabricType = document.getElementById('fabricType').value;
             const opWeight = parseFloat(document.getElementById('opWeight').value);
-            const piecesRemoved = parseInt(document.getElementById('piecesRemoved').value) || 0;
-
-            if (!opNumber || !componentCode || isNaN(opQuantity) || isNaN(opLength) || !fabricType || isNaN(opWeight)) {
-                alert('Por favor, preencha todos os campos corretamente.');
-                return;
-            }
-
-            const maxCarouselLength = 540;
-
-            // Cálculo do Número de Cortes
-            const numCuts = Math.floor(maxCarouselLength / opLength);
-            document.getElementById('cutsResult').textContent = `Número de Cortes: ${numCuts}`;
-
-            // Cálculo do Número de Voltas
-            let numTurns = calculateTurns(fabricType, opWeight);
-
-            document.getElementById('turnsResult').textContent = `Número de Voltas: ${numTurns}`;
-
-            // Cálculo da Quantidade Cortada
-            const cutAmount = numCuts * numTurns;
-            document.getElementById('cutAmountResult').textContent = `Quantidade Cortada: ${cutAmount}`;
-
-            // Cálculo do Número de Ciclos (mantendo a fórmula original)
-            const numCycles = opQuantity / cutAmount; // Fórmula original
-            document.getElementById('cyclesResult').textContent = `Número de Ciclos: ${numCycles}`;
-
-            // Cálculo do Restante de Voltas para Fechar a OP
-            const fractionalPart = numCycles - Math.floor(numCycles); // Parte decimal
-            const additionalCuts = Math.ceil(fractionalPart * cutAmount);
-            const remainingTurns = Math.ceil((additionalCuts * numTurns) / cutAmount);
-            document.getElementById('remainingTurnsResult').textContent = `Restante de Voltas para Fechar a OP: ${remainingTurns}`;
-
-            // Cálculo da Quantidade Total Cortada
-            const totalCutAmount = ((numTurns * Math.floor(numCuts)) + piecesRemoved);
-            document.getElementById('totalCutAmountResult').textContent = `Quantidade Total Cortada: ${totalCutAmount}`;
+            const piecesRemoved = parseInt(document.getElementById('piecesRemoved').value);
+            
+            // Cálculo do número de cortes
+            const cuts = Math.floor(opLength / (opWeight / 100)); // Exemplo de cálculo simplificado
+            totalCutAmount += cuts;
+            document.getElementById('totalCutAmount').textContent = `Quantidade Total Cortada: ${totalCutAmount}`;
 
             // Registro dos dados
             const dateTime = new Date().toLocaleString();
             const activeMachines = getActiveMachinesCount();
-            records.push({ dateTime, activeMachines, opNumber, componentCode, opQuantity, opLength, fabricType, opWeight, piecesRemoved });
+            records.push({ dateTime, activeMachines, opNumber, componentCode, opQuantity, opLength, fabricType, opWeight, piecesRemoved, cuts });
             updateRecordsTable();
         }
 
-        function calculateTurns(fabricType, opWeight) {
-            let turns = 0;
-            switch (fabricType) {
-                case 'Plano':
-                    if (opWeight <= 100) {
-                        turns = 2;
-                    } else if (opWeight > 100 && opWeight <= 200) {
-                        turns = 3;
-                    } else if (opWeight > 200 && opWeight <= 300) {
-                        turns = 4;
-                    } else if (opWeight > 300 && opWeight <= 400) {
-                        turns = 5;
-                    } else {
-                        turns = 6; // Para gramaturas acima de 400g
-                    }
-                    break;
-                case 'Tubular':
-                    if (opWeight <= 100) {
-                        turns = 3;
-                    } else if (opWeight > 100 && opWeight <= 200) {
-                        turns = 4;
-                    } else if (opWeight > 200 && opWeight <= 300) {
-                        turns = 5;
-                    } else if (opWeight > 300 && opWeight <= 400) {
-                        turns = 6;
-                    } else {
-                        turns = 7; // Para gramaturas acima de 400g
-                    }
-                    break;
-                case 'PET':
-                    if (opWeight <= 100) {
-                        turns = 4;
-                    } else if (opWeight > 100 && opWeight <= 200) {
-                        turns = 5;
-                    } else if (opWeight > 200 && opWeight <= 300) {
-                        turns = 6;
-                    } else if (opWeight > 300 && opWeight <= 400) {
-                        turns = 7;
-                    } else {
-                        turns = 8; // Para gramaturas acima de 400g
-                    }
-                    break;
-                default:
-                    turns = 0; // Caso não reconheça o tipo de tecido
-            }
-            return turns;
+        function getActiveMachinesCount() {
+            // Função para obter o número de máquinas ativas
+            return Math.floor(Math.random() * 10) + 1; // Simulando 1 a 10 máquinas ativas
         }
 
         function updateRecordsTable() {
@@ -299,15 +132,16 @@
                     <td>${record.fabricType}</td>
                     <td>${record.opWeight}</td>
                     <td>${record.piecesRemoved}</td>
+                    <td>${record.cuts}</td>
                 `;
                 tbody.appendChild(row);
             });
         }
 
         function downloadCSV() {
-            let csv = 'Data e Hora, Máquinas Ativas, Número da OP, Código do Componente, Quantidade da OP, Comprimento da OP, Tipo de Tecido, Gramatura da OP, Quantidade de Peças Retiradas\n';
+            let csv = 'Data e Hora, Máquinas Ativas, Número da OP, Código do Componente, Quantidade da OP, Comprimento da OP, Tipo de Tecido, Gramatura da OP, Quantidade de Peças Retiradas, Número de Cortes\n';
             records.forEach(record => {
-                csv += `${record.dateTime}, ${record.activeMachines}, ${record.opNumber}, ${record.componentCode}, ${record.opQuantity}, ${record.opLength}, ${record.fabricType}, ${record.opWeight}, ${record.piecesRemoved}\n`;
+                csv += `${record.dateTime}, ${record.activeMachines}, ${record.opNumber}, ${record.componentCode}, ${record.opQuantity}, ${record.opLength}, ${record.fabricType}, ${record.opWeight}, ${record.piecesRemoved}, ${record.cuts}\n`;
             });
 
             const blob = new Blob([csv], { type: 'text/csv;charset=utf-8;' });
