--- a/index.html
+++ b/index.html
@@ -246,150 +246,136 @@
     <button onclick="downloadCSV()">Download CSV</button>
 
     <script>
-        let records = [];
+       let records = [];
 
-        function toggleMachine(machineNumber) {
-            const button = document.getElementById(`machine${machineNumber}`);
-            if (button.classList.contains('inactive')) {
-                button.classList.remove('inactive');
-                button.classList.add('active');
-            } else {
-                button.classList.remove('active');
-                button.classList.add('inactive');
+    function toggleMachine(machineNumber) {
+        const button = document.getElementById(`machine${machineNumber}`);
+        if (button.classList.contains('inactive')) {
+            button.classList.remove('inactive');
+            button.classList.add('active');
+        } else {
+            button.classList.remove('active');
+            button.classList.add('inactive');
+        }
+    }
+
+    function getActiveMachinesCount() {
+        let count = 0;
+        const machineButtons = document.getElementsByClassName('machine-btn');
+        for (let button of machineButtons) {
+            if (button.classList.contains('active')) {
+                count++;
             }
         }
+        return count;
+    }
 
-        function getActiveMachinesCount() {
-            let count = 0;
-            const machineButtons = document.getElementsByClassName('machine-btn');
-            for (let button of machineButtons) {
-                if (button.classList.contains('active')) {
-                    count++;
-                }
-            }
-            return count;
+    function formatOPNumber(input) {
+        let value = input.value.replace(/\D/g, '');
+        if (value.length > 3) value = value.substring(0, 3) + '.' + value.substring(3);
+        if (value.length > 7) value = value.substring(0, 7) + '/' + value.substring(7);
+        if (value.length > 10) value = value.substring(0, 10) + '.' + value.substring(10);
+        input.value = value;
+    }
+
+    function calculateAndSave() {
+        const opNumber = document.getElementById('opNumber').value;
+        const componentCode = document.getElementById('componentCode').value;
+        const opQuantity = parseFloat(document.getElementById('opQuantity').value);
+        const opLength = parseFloat(document.getElementById('opLength').value);
+        const fabricType = document.getElementById('fabricType').value;
+        const opWeight = parseFloat(document.getElementById('opWeight').value);
+        const piecesRemoved = parseInt(document.getElementById('piecesRemoved').value) || 0;
+
+        if (!opNumber || !componentCode || isNaN(opQuantity) || isNaN(opLength) || !fabricType || isNaN(opWeight)) {
+            alert('Por favor, preencha todos os campos corretamente.');
+            return;
         }
 
-        function formatOPNumber(input) {
-            let value = input.value.replace(/\D/g, '');
-            if (value.length > 3) value = value.substring(0, 3) + '.' + value.substring(3);
-            if (value.length > 7) value = value.substring(0, 7) + '/' + value.substring(7);
-            if (value.length > 10) value = value.substring(0, 10) + '.' + value.substring(10);
-            input.value = value;
+        // Nova variável que substitui o valor de maxCarouselLength
+        const maxCarouselLength = 540 / opLength;
+
+        // Cálculo do Número de Cortes
+        const numCuts = Math.floor(maxCarouselLength);
+        document.getElementById('cutsResult').textContent = `Número de Cortes: ${numCuts}`;
+
+        // Cálculo do Número de Voltas
+        let numTurns = 0;
+
+        if (fabricType === 'Plano') {
+            numTurns = Math.floor(((120 - opWeight) * 0.73) + 40);
+        } else if (fabricType === 'Tubular') {
+            numTurns = Math.floor(((82 - opWeight) * 0.3) + 40);
+        } else if (fabricType === 'PATCH') {
+            numTurns = 25; // Valor fixo para PATCH
         }
 
-       function calculateAndSave() {
-    const opNumber = document.getElementById('opNumber').value;
-    const componentCode = document.getElementById('componentCode').value;
-    const opQuantity = parseFloat(document.getElementById('opQuantity').value);
-    const opLength = parseFloat(document.getElementById('opLength').value);
-    const fabricType = document.getElementById('fabricType').value;
-    const opWeight = parseFloat(document.getElementById('opWeight').value);
-    const piecesRemoved = parseInt(document.getElementById('piecesRemoved').value) || 0;
+        // Verificação da regra de substituição de Voltas
+        const totalCuts = numTurns * numCuts; // Número total de cortes baseado em voltas e cortes
+        if (totalCuts > opQuantity) {
+            numTurns = Math.floor(opQuantity / numCuts); // Ajusta o número de voltas
+        }
 
-    if (!opNumber || !componentCode || isNaN(opQuantity) || isNaN(opLength) || !fabricType || isNaN(opWeight)) {
-        alert('Por favor, preencha todos os campos corretamente.');
-        return;
+        document.getElementById('turnsResult').textContent = `Número de Voltas: ${numTurns}`;
+
+        // Cálculo da Quantidade Cortada
+        const cutAmount = Math.floor(numCuts * numTurns);
+        document.getElementById('cutAmountResult').textContent = `Quantidade Cortada: ${cutAmount}`;
+
+        // Cálculo do Número de Ciclos
+        const numCycles = cutAmount > 0 ? opQuantity / cutAmount : 0;
+        document.getElementById('cyclesResult').textContent = `Número de Ciclos: ${numCycles}`;
+
+        // Cálculo do Restante de Voltas para Fechar a OP
+        const fractionalPart = numCycles - Math.floor(numCycles);
+        const remainingTurns = Math.ceil(numTurns * fractionalPart);
+        document.getElementById('remainingTurnsResult').textContent = `Restante de Voltas para Fechar a OP: ${remainingTurns}`;
+
+        // Cálculo da Quantidade Total Cortada
+        const totalCutAmount = Math.floor((numCuts * Math.floor(numCycles) * numTurns) + remainingTurns * numCuts);
+        document.getElementById('totalCutAmountResult').textContent = `Quantidade Total Cortada: ${totalCutAmount}`;
+
+        // Armazena o registro
+        records.push({
+            dateTime: new Date().toLocaleString(),
+            activeMachines: getActiveMachinesCount(),
+            opNumber,
+            componentCode,
+            opQuantity,
+            opLength,
+            fabricType,
+            opWeight,
+            piecesRemoved
+        });
+
+        updateRecordsTable();
     }
 
-    const maxCarouselLength = 540;
+    function updateRecordsTable() {
+        const tableBody = document.getElementById('recordsTable').getElementsByTagName('tbody')[0];
+        tableBody.innerHTML = '';
 
-    // Cálculo do Número de Cortes
-    const numCuts = Math.floor(maxCarouselLength / opLength);
-    document.getElementById('cutsResult').textContent = `Número de Cortes: ${numCuts}`;
-
-    // Cálculo do Número de Voltas
-    let numTurns = 0;
-
-    if (fabricType === 'Plano') {
-        numTurns = Math.floor(((120 - opWeight) * 0.73) + 40);
-    } else if (fabricType === 'Tubular') {
-        numTurns = Math.floor(((82 - opWeight) * 0.3) + 40);
-    } else if (fabricType === 'PATCH') {
-        numTurns = 25; // Valor fixo para PATCH
-    }
-
-    // Verificação da regra de substituição de Voltas
-    const totalCuts = numTurns * numCuts; // Número total de cortes baseado em voltas e cortes
-    if (totalCuts > opQuantity) {
-        numTurns = Math.floor(opQuantity / numCuts); // Ajusta o número de voltas
-    }
-
-    document.getElementById('turnsResult').textContent = `Número de Voltas: ${numTurns}`;
-
-    // Cálculo da Quantidade Cortada
-    const cutAmount = Math.floor(numCuts * numTurns);
-    document.getElementById('cutAmountResult').textContent = `Quantidade Cortada: ${cutAmount}`;
-
-    // Cálculo do Número de Ciclos
-    const numCycles = cutAmount > 0 ? opQuantity / cutAmount : 0;
-    document.getElementById('cyclesResult').textContent = `Número de Ciclos: ${numCycles}`;
-
-    // Cálculo do Restante de Voltas para Fechar a OP
-    const fractionalPart = numCycles - Math.floor(numCycles);
-    const remainingTurns = Math.ceil(numTurns * fractionalPart);
-    document.getElementById('remainingTurnsResult').textContent = `Restante de Voltas para Fechar a OP: ${remainingTurns}`;
-
-    // Cálculo da Quantidade Total Cortada
-    const totalCutAmount = Math.floor((numCuts * Math.floor(numCycles) * numTurns) + remainingTurns * numCuts);
-    document.getElementById('totalCutAmountResult').textContent = `Quantidade Total Cortada: ${totalCutAmount}`;
-
-    // Atualizando a tabela com o novo registro
-    const newRecord = {
-        dateTime: new Date().toLocaleString(),
-        activeMachines: getActiveMachinesCount(),
-        opNumber: opNumber,
-        componentCode: componentCode,
-        opQuantity: opQuantity,
-        opLength: opLength,
-        fabricType: fabricType,
-        opWeight: opWeight,
-        piecesRemoved: piecesRemoved
-    };
-
-    records.push(newRecord);
-    updateTable();
-}
-
-
-        function updateTable() {
-            const tbody = document.querySelector('#recordsTable tbody');
-            tbody.innerHTML = '';
-
-            records.forEach(record => {
-                const row = document.createElement('tr');
-                row.innerHTML = `
-                    <td>${record.dateTime}</td>
-                    <td>${record.activeMachines}</td>
-                    <td>${record.opNumber}</td>
-                    <td>${record.componentCode}</td>
-                    <td>${record.opQuantity}</td>
-                    <td>${record.opLength}</td>
-                    <td>${record.fabricType}</td>
-                    <td>${record.opWeight}</td>
-                    <td>${record.piecesRemoved}</td>
-                `;
-                tbody.appendChild(row);
+        records.forEach(record => {
+            const row = tableBody.insertRow();
+            Object.values(record).forEach(value => {
+                const cell = row.insertCell();
+                cell.textContent = value;
             });
-        }
+        });
+    }
 
-        function downloadCSV() {
-            let csvContent = "data:text/csv;charset=utf-8,";
-            csvContent += "Data e Hora,Máquinas Ativas,Número da OP,Código do Componente,Quantidade da OP,Comprimento da OP,Tipo de Tecido,Gramatura da OP,Quantidade de Peças Retiradas\n";
+    function downloadCSV() {
+        let csv = 'Data e Hora,Máquinas Ativas,Número da OP,Código do Componente,Quantidade da OP,Comprimento da OP,Tipo de Tecido,Gramatura da OP,Quantidade de Peças Retiradas\n';
+        records.forEach(record => {
+            csv += `${record.dateTime},${record.activeMachines},${record.opNumber},${record.componentCode},${record.opQuantity},${record.opLength},${record.fabricType},${record.opWeight},${record.piecesRemoved}\n`;
+        });
 
-            records.forEach(record => {
-                const row = `${record.dateTime},${record.activeMachines},${record.opNumber},${record.componentCode},${record.opQuantity},${record.opLength},${record.fabricType},${record.opWeight},${record.piecesRemoved}`;
-                csvContent += row + "\n";
-            });
-
-            const encodedUri = encodeURI(csvContent);
-            const link = document.createElement('a');
-            link.setAttribute('href', encodedUri);
-            link.setAttribute('download', 'registro_producao.csv');
-            document.body.appendChild(link);
-            link.click();
-            document.body.removeChild(link);
-        }
+        const blob = new Blob([csv], { type: 'text/csv' });
+        const link = document.createElement('a');
+        link.href = URL.createObjectURL(blob);
+        link.download = 'records.csv';
+        link.click();
+    }
     </script>
 </body>
 </html>
